--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Multi-Platform Installers
+name: Build & Deploy Multi-Platform Installers
 
 on:
   push:
@@ -28,6 +28,16 @@ jobs:
         run: |
           go build -o keeper-installer-linux-amd64
       
+      - name: Upload to BunnyCDN
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+        env:
+          BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
+        run: |
+          curl -X PUT \
+            -H "AccessKey: $BUNNY_API_KEY" \
+            -T keeper-installer-linux-amd64 \
+            "https://storage.bunnycdn.com/qne-installers-cdn/keeper-installer-linux-amd64"
+      
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
@@ -47,6 +57,17 @@ jobs:
       - name: Build
         run: |
           go build -o keeper-installer-windows-amd64.exe
+      
+      - name: Upload to BunnyCDN
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+        env:
+          BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
+        shell: bash
+        run: |
+          curl -X PUT \
+            -H "AccessKey: $BUNNY_API_KEY" \
+            -T keeper-installer-windows-amd64.exe \
+            "https://storage.bunnycdn.com/qne-installers-cdn/keeper-installer-windows-amd64.exe"
       
       - name: Upload artifact
         uses: actions/upload-artifact@v3
@@ -68,11 +89,53 @@ jobs:
         run: |
           go build -o keeper-installer-darwin-amd64
       
+      - name: Upload to BunnyCDN
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+        env:
+          BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
+        run: |
+          curl -X PUT \
+            -H "AccessKey: $BUNNY_API_KEY" \
+            -T keeper-installer-darwin-amd64 \
+            "https://storage.bunnycdn.com/qne-installers-cdn/keeper-installer-darwin-amd64"
+      
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: keeper-installer-darwin-amd64
           path: keeper-installer-darwin-amd64
+
+  deploy-website:
+    needs: [build-linux, build-windows, build-macos]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Upload website to BunnyCDN
+        env:
+          BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
+        run: |
+          # Upload index.html
+          curl -X PUT \
+            -H "AccessKey: $BUNNY_API_KEY" \
+            -T website/index.html \
+            "https://storage.bunnycdn.com/quickneasy-info/index.html"
+          
+          # Upload style.css
+          curl -X PUT \
+            -H "AccessKey: $BUNNY_API_KEY" \
+            -T website/style.css \
+            "https://storage.bunnycdn.com/quickneasy-info/style.css"
+      
+      - name: Purge CDN cache
+        env:
+          BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
+        run: |
+          # Purge quickneasy.info CDN cache
+          curl -X POST \
+            -H "AccessKey: $BUNNY_API_KEY" \
+            "https://api.bunny.net/pullzone/4803380/purgeCache"
 
   release:
     needs: [build-linux, build-windows, build-macos]
