--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           go build -o keeper-installer-linux-amd64
       
       - name: Upload to BunnyCDN
-        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_API_KEY != ''
         env:
           BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
         run: |
@@ -59,7 +59,7 @@ jobs:
           go build -o keeper-installer-windows-amd64.exe
       
       - name: Upload to BunnyCDN
-        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_API_KEY != ''
         env:
           BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
         shell: bash
@@ -90,7 +90,7 @@ jobs:
           go build -o keeper-installer-darwin-amd64
       
       - name: Upload to BunnyCDN
-        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_API_KEY != ''
         env:
           BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
         run: |
@@ -108,7 +108,7 @@ jobs:
   deploy-website:
     needs: [build-linux, build-windows, build-macos]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+    if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_API_KEY != ''
     steps:
       - uses: actions/checkout@v3
       
