--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,12 +29,12 @@ jobs:
           go build -o keeper-installer-linux-amd64
       
       - name: Upload to BunnyCDN
-        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_API_KEY != ''
+        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_STORAGE_PASSWORD_INSTALLERS != ''
         env:
-          BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
+          BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD_INSTALLERS }}
         run: |
           curl -X PUT \
-            -H "AccessKey: $BUNNY_API_KEY" \
+            -H "AccessKey: $BUNNY_STORAGE_PASSWORD" \
             -T keeper-installer-linux-amd64 \
             "https://storage.bunnycdn.com/qne-installers-cdn/keeper-installer-linux-amd64"
       
@@ -59,13 +59,13 @@ jobs:
           go build -o keeper-installer-windows-amd64.exe
       
       - name: Upload to BunnyCDN
-        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_API_KEY != ''
+        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_STORAGE_PASSWORD_INSTALLERS != ''
         env:
-          BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
+          BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD_INSTALLERS }}
         shell: bash
         run: |
           curl -X PUT \
-            -H "AccessKey: $BUNNY_API_KEY" \
+            -H "AccessKey: $BUNNY_STORAGE_PASSWORD" \
             -T keeper-installer-windows-amd64.exe \
             "https://storage.bunnycdn.com/qne-installers-cdn/keeper-installer-windows-amd64.exe"
       
@@ -90,12 +90,12 @@ jobs:
           go build -o keeper-installer-darwin-amd64
       
       - name: Upload to BunnyCDN
-        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_API_KEY != ''
+        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_STORAGE_PASSWORD_INSTALLERS != ''
         env:
-          BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
+          BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD_INSTALLERS }}
         run: |
           curl -X PUT \
-            -H "AccessKey: $BUNNY_API_KEY" \
+            -H "AccessKey: $BUNNY_STORAGE_PASSWORD" \
             -T keeper-installer-darwin-amd64 \
             "https://storage.bunnycdn.com/qne-installers-cdn/keeper-installer-darwin-amd64"
       
@@ -108,23 +108,23 @@ jobs:
   deploy-website:
     needs: [build-linux, build-windows, build-macos]
     runs-on: ubuntu-latest
-    if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_API_KEY != ''
+    if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) && secrets.BUNNY_STORAGE_PASSWORD_WEBSITE != ''
     steps:
       - uses: actions/checkout@v3
       
       - name: Upload website to BunnyCDN
         env:
-          BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
+          BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD_WEBSITE }}
         run: |
           # Upload index.html
           curl -X PUT \
-            -H "AccessKey: $BUNNY_API_KEY" \
+            -H "AccessKey: $BUNNY_STORAGE_PASSWORD" \
             -T website/index.html \
             "https://storage.bunnycdn.com/quickneasy-info/index.html"
           
           # Upload style.css
           curl -X PUT \
-            -H "AccessKey: $BUNNY_API_KEY" \
+            -H "AccessKey: $BUNNY_STORAGE_PASSWORD" \
             -T website/style.css \
             "https://storage.bunnycdn.com/quickneasy-info/style.css"
       
