--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy Keeper Installer (Linux)
+name: Build & Deploy Keeper Installer (Multi-Platform)
 
 on:
   push:
@@ -44,12 +44,69 @@ jobs:
           name: keeper-installer-linux-amd64
           path: keeper-installer-linux-amd64
 
-  # Windows and macOS builds disabled - Keeper AppImage is Linux-only
-  # To add Windows/Mac support, need to build Keeper app for those platforms
-  # See: https://github.com/qnepff/keeper-installer/issues/1
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24'
+      
+      - name: Build
+        run: |
+          go build -o keeper-installer-windows-amd64.exe
+      
+      - name: Upload to BunnyCDN
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+        env:
+          BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD_INSTALLERS }}
+        shell: bash
+        run: |
+          curl -X PUT \
+            -H "AccessKey: $BUNNY_STORAGE_PASSWORD" \
+            -T keeper-installer-windows-amd64.exe \
+            "https://storage.bunnycdn.com/qne-installers/keeper-installer-windows-amd64.exe"
+      
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: keeper-installer-windows-amd64.exe
+          path: keeper-installer-windows-amd64.exe
+
+  build-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24'
+      
+      - name: Build
+        run: |
+          go build -o keeper-installer-darwin-amd64
+      
+      - name: Upload to BunnyCDN
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+        env:
+          BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD_INSTALLERS }}
+        run: |
+          curl -X PUT \
+            -H "AccessKey: $BUNNY_STORAGE_PASSWORD" \
+            -T keeper-installer-darwin-amd64 \
+            "https://storage.bunnycdn.com/qne-installers/keeper-installer-darwin-amd64"
+      
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: keeper-installer-darwin-amd64
+          path: keeper-installer-darwin-amd64
 
   deploy-website:
-    needs: [build-linux]
+    needs: [build-linux, build-windows, build-macos]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
     steps:
@@ -81,7 +138,7 @@ jobs:
             "https://api.bunny.net/pullzone/4803380/purgeCache"
 
   release:
-    needs: [build-linux]
+    needs: [build-linux, build-windows, build-macos]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
@@ -93,5 +150,7 @@ jobs:
         with:
           files: |
             keeper-installer-linux-amd64/keeper-installer-linux-amd64
+            keeper-installer-windows-amd64.exe/keeper-installer-windows-amd64.exe
+            keeper-installer-darwin-amd64/keeper-installer-darwin-amd64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
